fixed overflow-x issues

--- a/css/style.scss
+++ b/css/style.scss
@@ -60,7 +60,7 @@ header{
   border-radius: 50%;
 }
 .view{
-  position: absolute;
+  position: fixed;
   height: 100%;
   height: 100vh;
   width: 100%;
@@ -69,11 +69,13 @@ header{
   left: 100%;
   padding: 10px;
   box-sizing: border-box;
-  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: auto;
   .content{
     width: 90%;
     margin: auto;
     padding-bottom: 90px;
+    overflow: scroll;
     @include clearfix;
     h1{
       text-transform: uppercase;
